Bug 1527556 - Change MAX_DISPLAY_CONNECTIONS to 3 r=stransky

nsWaylandDisplay needs to be allocated for each calling thread(main thread, compositor thread and render thread)

Differential Revision: https://phabricator.services.mozilla.com/D20118